--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
 		</style>
 		<link rel="icon"
       type="image/png"
-      href="Cookie.png" />
+      href="juicy.jpg" />
       <title>Viper</title>
 	<head>
 
